# marketplace

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
docs/: tryout-findings-2026-07-16.md
docs/superpowers/plans/: 2026-07-12-payments-stripe-connect.md  2026-07-13-auth-real-users.md  2026-07-14-disputes.md  2026-07-14-moderation.md  2026-07-14-notification-preferences.md  (+5 more)
migrations/: env.py
migrations/versions/: 02eec2989f9c_seller_reviews.py  329564e9e7d0_payments.py  48d2c1099dea_moderation.py  75e197ddadba_disputes.py  87aec6283afd_ops_indexes.py  a69df93d854b_notification_prefs.py  b215d30cb3d9_notifications.py  c7807e909e5f_initial_schema.py  ce07e913bc82_fee_aware_margin.py  f10e73f70fe7_auth.py
scripts/: demo.py  seed.py
src/marketplace/: __init__.py  api.py  auth.py  config.py  db.py  entities.py  idempotency.py  mail.py  matching.py  models.py  notifications.py  observability.py  pricing.py  repo.py  settings.py  store.py
tests/: conftest.py  test_auth.py  test_auth_and_hardening.py  test_disputes.py  test_end_to_end.py  test_fees.py  test_hardening.py  test_idempotency.py  test_information_asymmetry.py  test_lifecycle.py  test_live_server.py  test_margin_floor.py  test_matching.py  test_moderation.py  test_notification_prefs.py  test_notifications.py  test_observability.py  test_payments.py  test_payments_port.py  test_pricing.py  test_ratings.py  test_retention.py  test_runtime_config.py  test_seed.py  test_seller_reviews.py  test_stats.py  test_stripe_provider.py
(+14 files in other folders)
